--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@symlinkde/eco-os-pk-storage",
-  "version": "0.0.59",
+  "version": "0.0.63",
   "description": "Package containing base core storage adator for mongodb",
   "types": "lib/index.d.ts",
   "main": "lib/index.js",
@@ -19,17 +19,18 @@
   },
   "dependencies": {
     "@symlinkde/eco-os-pk-core": "^0.0.*",
+    "@symlinkde/eco-os-pk-log": "^0.0.*",
     "config": "^3.1.0",
     "inversify": "^5.0.1",
-    "mongodb": "^3.2.4",
+    "mongodb": "^3.3.1",
     "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
     "@symlinkde/eco-os-pk-models": "^0.0.*",
     "@types/config": "^0.0.34",
     "@types/jest": "^24.0.12",
-    "@types/mongodb": "^3.1.26",
-    "@types/node": "^12.0.0",
+    "@types/mongodb": "^3.3.1",
+    "@types/node": "^12.6.0",
     "google-closure-compiler": "^20190415.0.0",
     "gulp": "^4.0.2",
     "gulp-debug": "^4.0.0",
@@ -45,10 +46,10 @@
     "ts-jest": "^24.0.2",
     "ts-node": "^8.1.0",
     "tslint": "^5.16.0",
-    "typegoose": "^5.6.0",
+    "typegoose": "^5.9.0",
     "typescript": "^3.4.5"
   },
   "company": "Symlink GmbH",
   "homepage": "https://2ndlock.com",
-  "repository": "https://gitlab.com"
+  "repository": "https://gitlab.com/symlinkde"
 }
